Adjusted the min-width for small resolution screen prevent the scrollbar (horizontal).

--- a/src/nameserver-history-viewer/components/nameserver-history.component.scss
+++ b/src/nameserver-history-viewer/components/nameserver-history.component.scss
@@ -30,7 +30,7 @@
 
   .nameserver-history-all {
     width: 98%;
-    min-width: 1325px;
+    min-width: 1314px;
     height: auto;
     border: 1px none $defaultDashedBorderColor;
     border-bottom-style: dashed;
